<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.MainActivity"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/transports_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/transports_label"
        app:layout_constraintBaseline_toBaselineOf="@id/transports"
        app:layout_constraintEnd_toStartOf="@+id/center"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/transports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/signal_strength"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/signal_strength_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/signal_strength_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/signal_strength"
        app:layout_constraintEnd_toStartOf="@+id/center"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signal_strength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/has_internet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/center"
        app:layout_constraintTop_toBottomOf="@id/transports" />

    <TextView
        android:id="@+id/signal_strength_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/signal_strength_units"
        app:layout_constraintBaseline_toBaselineOf="@id/signal_strength"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/signal_strength"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/signal_strength_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="signal_strength, signal_strength_label, signal_strength_units" />

    <TextView
        android:id="@+id/has_internet_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/has_internet_label"
        app:layout_constraintBottom_toBottomOf="@+id/has_internet"
        app:layout_constraintEnd_toStartOf="@+id/center"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/has_internet" />

    <ImageView
        android:id="@+id/has_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/has_internet_no"
        android:src="@drawable/ic_no"
        app:layout_constraintBottom_toTopOf="@id/down_speed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/center"
        app:layout_constraintTop_toBottomOf="@id/signal_strength"
        app:tint="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/down_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/down_speed_label"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/has_internet" />

    <ImageView
        android:id="@+id/down_speed_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_down"
        app:layout_constraintBottom_toBottomOf="@+id/down_speed"
        app:layout_constraintEnd_toStartOf="@id/center"
        app:layout_constraintStart_toEndOf="@id/down_speed"
        app:layout_constraintTop_toTopOf="@+id/down_speed"
        app:tint="@color/down" />

    <ImageView
        android:id="@+id/up_speed_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_up"
        app:layout_constraintBottom_toBottomOf="@+id/up_speed"
        app:layout_constraintEnd_toStartOf="@id/up_speed"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/center"
        app:layout_constraintTop_toTopOf="@+id/up_speed"
        app:tint="@color/up" />

    <TextView
        android:id="@+id/up_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/down_speed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/up_speed_label" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/connected_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="transports, transports_label, has_internet_label, has_internet,down_speed_label, down_speed, up_speed_label, up_speed" />

    <TextView
        android:id="@+id/no_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_connection"
        android:textAppearance="?textAppearanceHeadline3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>